--- a/3.html
+++ b/3.html
@@ -1,77 +1,11 @@
-
-<html>
-<head>
-<style>
-#title{
-  font-size:50px;
-  text-align:center;
-}
-#text1{
-  width:600px;
-  float:left;
-  padding:70px;
-  font-size:20px;
-}
-#text2{
-  width:600px;
-  float:right;
-  padding:70px;
-  font-size:20px;
-}
-
-#Link{
-  text-align:center;
-  font-size:33px;
-  clear:both;
-}
-</style>
-</head>
-
-<body>
-<div id="title">
-<h1>Mystery of Love</h1>
-</div>
-
-<hr>
-<div id="text1">
-<p>Oh, to see without my eyes</p>
-<p>The first time that you kissed me</P>
-<p>Boundless by the time I cried</p>
-<p>I built your walls around me</p>
-<p>White noise, what an awful sound</p>
-<p>Fumbling by Rogue River</p>
-<p>Feel my feet above the ground</p>
-<p>Hand of God, deliver me</p>
-<p>Oh, oh woe-oh-woah is me</p>
-<p>The first time that you touched me</p>
-<p>Oh, will wonders ever cease?</p>
-<p>Blessed be the mystery of love</p>
-<p>Lord, I no longer believe</p>
-<p>Drowned in living waters</p>
-<p>Cursed by the love that I received</p>
-<p>From my brother's daughter</p>
-<p>Like Hephaestion, who died</p>
-</div>
-
-<div id="text2">
-<p>Alexander's lover</p>
-<p>Now my riverbed has dried</p>
-<p>Shall I find no other?</p>
-<p>Oh, oh woe-oh-woah is me</p>
-<p>I'm running like a plover</p>
-<p>Now I'm prone to misery</p>
-<p>The birthmark on your shoulder reminds me</p>
-<p>How much sorrow can I take?</p>
-<p>Blackbird on my shoulder</p>
-<p>And what difference does it make</p>
-<p>When this love is over?</p>
-<p>Shall I sleep within your bed</p>
-<p>River of unhappiness</p>
-<p>Hold your hands upon my head</p>
-<p>Till I breathe my last breath</p>
-</div>
-</hr>
-
-
-</body>
-</html>
+<HTML>
+<HEAD>
+<TITLE> second </TITLE>
+</HEAD>
+<BODY>
+<FONT SIZE=6 > 
+<B> The Second One </B> </FONT> 
+<P>Another Useless Gif </P> 
+	<IMG SRC = "2.gif" ALT = "2"/>
+</BODY>
+</HTML>
