--- a/4.html
+++ b/4.html
@@ -1,27 +1,11 @@
-
-<html>
-<head>
-<style>
-#Link{
-  text-align:center;
-  font-size:33px;
-  clear:both;
-}
-</style>
-</head>
-<body bgcolor="LightSteelBlue">
-<h6 style= "text-align:center;font-size:75;color:"black">插入图像<h6>
-<p style="font-size:30px;color:white;">
-haha
-<img src="picture1.jpg" align="bottom" width="160" height="100"/>
-</p>
-
-
-
-<div id="Link">
-<a href="/2.html">←the previous</a>
-<a href="/index.html">home</a>
-
-</div>
-</body>
-</html>
+<HTML>
+<HEAD>
+<TITLE> third </TITLE>
+</HEAD>
+<BODY>
+<FONT SIZE=6 > 
+<B> The Third One </B> </FONT> 
+<P>Still A Useless Gif </P> 
+	<IMG SRC = "3.gif" ALT = "3"/>
+</BODY>
+</HTML>
